# dotsec

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
distribution/: install.sh
src/: cli.rs  encryption.rs  lib.rs  main.rs  storage.rs
tests/: cli.rs  encryption.rs  sled.rs
