[package]
name = "dotsec"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
serial_test = "3.2.0"
sled = "0.34.7"
tempfile = "3.19.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
