[package]
name = "dotsec"
version = "0.1.0"
edition = "2024"
author = "Junhson Jean-Baptiste <jjeanba2@binghamton.edu>"
repository = "https://github.com/junhsonjb/dotsec"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "a lightweight CLI tool for locally managing secrets"
categories = ["command-line-utilities"]
keywords = [
    "dotfiles",
    "security",
    "secrets",
    "tool",
]

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.36", features = ["derive"] }
rand_core = "0.9.3"
serial_test = "3.2.0"
sled = "0.34.7"
tempfile = "3.19.1"
xdg = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
